Change to static

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # What kind of thing is this ("workshop")? #Don't Change
 kind: "workshop"
 # Is this a permanent page 'static' or a taught workshop 'dated'
-delivery: "dated"
+delivery: "static"
 
 # Overall title for the Workshop.
 # This variable is used to (optionally) add a title in the "jumbotron"
